--- a/server/web/css/main.css
+++ b/server/web/css/main.css
@@ -6,7 +6,7 @@
 
 */
 
-@font-face { font-family: "Oxygen-Regular";         src: url('/font/Oxygen-Regular.ttf'); }
+@font-face { font-family: "Oxygen-Regular";         src: url('/fonts/Oxygen-Regular.ttf'); }
 
 /*****************************************************************************************
 
