--- a/server/views/ctauth/base.twig
+++ b/server/views/ctauth/base.twig
@@ -47,7 +47,7 @@
          <div id="user" class="nav">
             {% if app.user %}
             <li id="login-out"><a href="{{ path('user.logout') }}"><i class="icon-off"></i> Sign out</a></li>
-              <li id="user-name"><a href="{{ path('user') }}"><i class="icon-user"></i> {{ app.user.displayName }}</a></li>
+              <li id="user-path"><a href="{{ path('user') }}"><i class="icon-user"></i> {{ app.user.displayName }}</a></li>
                         
                     {% else %}
                         <li><a href="{{ path('user.login') }}">Sign in</a></li>
