--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -244,13 +244,15 @@ css for the login page of cortext
         width: 230px;
 }
 
+.log-form{margin-left: -3px;}
+.log-regist{margin-left: 151px;}
+
+
 .controls .save-info, .controls .bt-register{    
         background: #3C3C3C;
         border: 1px solid #303030;
         color: #FFFFFF;
-        height: 34px;
-        margin-right:16px;
-        margin-left: 153px;
+        height: 34px;        
         margin-top: 10px;
         padding-top: 6px;
         width: 230px;
