--- a/server/web/css/main.css
+++ b/server/web/css/main.css
@@ -20,7 +20,6 @@ body {
         background-repeat:repeat-x;
         background-attachment:fixed;
         overflow-x:hidden; 
-        background-color: #f3f2ea;
 }
 
 #content {
@@ -82,8 +81,8 @@ button.inactive { color : #DCDCDC !important; cursor: default !important; }
 
 #menu {        
         height:50px;
-        background-color: #5c4283;
-        border-bottom: 3px solid #8162b0;
+        background-color: #EEF2F6;
+        border-bottom: 3px solid #9C9C9C;
         position: relative;
 }
 
