--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -193,7 +193,7 @@ css for the login page of cortext
 .profile .table-user{
         border: 1px solid #E6E6E6;
         background-color: #E6E6E6;
-        height: 40px;
+        min-height: 40px;
         margin-bottom: 10px;
         margin-top: 15px;
         width: 750px;
@@ -202,17 +202,18 @@ css for the login page of cortext
 .profile .table-user p{
         color: #909090;
         font: 14px Arial,sans-serif;
-        margin-top:12px;
-        margin-left: 10px;
+        margin: 12px 10px;
         display: inline-block;
 }
 .profile .table-user .key{
         width: 250px;
+	float: left;
 }
 .profile .table-user .item{
         color: #3A3A3A;
         font: 14px Arial,sans-serif;
         margin-top:12px;
+	max-width: 460px;
 }
 
 #edit-user a{
