--- a/server/web/css/main.css
+++ b/server/web/css/main.css
@@ -81,8 +81,10 @@ button.inactive { color : #DCDCDC !important; cursor: default !important; }
 
 #menu {        
         height:50px;
-        background-color: #EEF2F6;
-        border-bottom: 3px solid #9C9C9C;
+        /*background-color: #EEF2F6;
+        border-bottom: 3px solid #9C9C9C;*/
+        background-color: #f6fafe;
+        border-bottom: 3px solid #e3e3e3;
         position: relative;
 }
 
